# vscode_theme_converter

./: .gitignore  README.md  pyproject.toml
scripts/: cycle_ghostty_themes.py
src/vscode_theme_converter/: ansi_mapping.py  contrast.py  conversion_mappings.py  converter_vsc_tm.py  main.py  terminal.py  tm_theme.py  tm_theme_converter.py  vscode_theme.py
themes/vscode-light-modern/: vscode-light-modern-ansi-map.json
themes/vscode-light-modern/ghostty/: vscode-light-modern  vscode-light-modern-dark  vscode-light-modern-dark-orig-colors  vscode-light-modern-orig
themes/vscode-light-modern/tm_theme/: vscode-light-modern-ansi.tmTheme  vscode-light-modern.tmTheme
